Updated installation script to not configure geoserver